# darknet_mobilenet

./: .gitignore  CMakeLists.txt  Makefile  README.md  depthwise_convolutional_kernels.cu  object_detection
cfg/: alexnet.cfg  cifar.cfg  cifar.data  coco.data  darknet-squeeze.cfg  darknet.cfg  darknet19.cfg  extraction.cfg  imagenet1k.data  mobilenet-1k.cfg  mobilenet.cfg  mobilenet_imagenet.cfg  tiny-yolo-test.cfg  tiny-yolo.cfg  ty-kk2.cfg  ty-kk3-1k.cfg  ty-kk3.cfg
examples/: art.c  classifier.c  darknet.c  darknet_debug.c  regressor.c  segmenter.c  swag.c
python/: make_imagenet_list.py  makelist.py
src/: activations.c  avgpool_layer.c  convolutional_kernels.cu  convolutional_layer.c  darknet.h  data.c  demo.c  depthwise_convolution_test.py  depthwise_convolutional_kernels.cu  depthwise_convolutional_layer.c  depthwise_convolutional_layer.h  network.c  network.h  network_kernels.cu  parser.c  softmax_layer.c  unistd.h  utils.c
vs2015/: vs2015.sln
vs2015/vs2015/: depthwise_conv_op_gpu.cu.cc  kernel.cu  vs2015.vcxproj  vs2015.vcxproj.filters
vs2015/vs2015/cfg/: cifar.data  cifar_mobilenet.cfg  test.cfg
vs2015/vs2015/cifar/: test.list  train.list
vs2015/vs2015/pthread/include/: pthread.h
vs2015/vs2015/pthread/lib/x64/debug/: pthread_dll.exp  pthread_dll.lib  pthread_dll.map  pthread_test.bsc
vs2015/vs2015/pthread/lib/x64/release/: pthread_dll.exp  pthread_dll.lib  pthread_dll.map
